# pytest-compose-github

./: docker-compose.yml  pyproject.toml
.github/workflows/: default.yaml
src/: sftp.py
tests/: conftest.py  test_atmoz.py
tests/files/keys/: authorized_keys  user_rsa  user_rsa.pub
tests/files/localstack/: localstack-script.sh
tests/files/localstack/bank1/: Cash_Report_20230927_105849.csv
