[tool.poetry]
name = "pytest-compose-github"
version = "0.1.0"
description = ""
authors = ["reikje <reik.schatz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "^0.6.1"
paramiko = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-docker = "^2.0.1"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
